--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0"
   },
